<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    tools:context="com.hfad.androidcalculator.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp">

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:gravity="bottom"
        android:maxLines="2"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:gravity="bottom"
        android:layout_below="@id/number"
        android:maxLines="1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInput"
        android:layout_alignLeft="@id/userInput"
        android:text="@string/button7"
        android:textSize="25sp"
        android:onClick="onClickButton7"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInput"
        android:layout_toRightOf="@id/button7"
        android:text="@string/button8"
        android:textSize="25sp"
        android:onClick="onClickButton8"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInput"
        android:layout_toRightOf="@id/button8"
        android:text="@string/button9"
        android:textSize="25sp"
        android:onClick="onClickButton9"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInput"
        android:layout_toRightOf="@id/button9"
        android:layout_alignRight="@id/userInput"
        android:text="@string/buttonAdd"
        android:textSize="25sp"
        android:onClick="onClickButtonAdd"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:layout_alignLeft="@id/userInput"
        android:text="@string/button4"
        android:textSize="25sp"
        android:onClick="onClickButton4"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button8"
        android:layout_toRightOf="@id/button4"
        android:text="@string/button5"
        android:textSize="25sp"
        android:onClick="onClickButton5"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button9"
        android:layout_toRightOf="@id/button5"
        android:text="@string/button6"
        android:textSize="25sp"
        android:onClick="onClickButton6"/>

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAdd"
        android:layout_toRightOf="@id/button6"
        android:layout_alignRight="@id/userInput"
        android:text="@string/buttonSubtract"
        android:textSize="25sp"
        android:onClick="onClickButtonSubtract"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_alignLeft="@id/userInput"
        android:text="@string/button1"
        android:textSize="25sp"
        android:onClick="onClickButton1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_toRightOf="@id/button1"
        android:text="@string/button2"
        android:textSize="25sp"
        android:onClick="onClickButton2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button6"
        android:layout_toRightOf="@id/button2"
        android:text="@string/button3"
        android:textSize="25sp"
        android:onClick="onClickButton3"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSubtract"
        android:layout_toRightOf="@id/button3"
        android:layout_alignRight="@id/userInput"
        android:text="@string/buttonMultiply"
        android:textSize="25sp"
        android:onClick="onClickButtonMultiply"/>

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:text="@string/buttonDot"
        android:textSize="25sp"
        android:onClick="onClickButtonDot"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_toRightOf="@id/buttonDot"
        android:text="@string/button0"
        android:textSize="25sp"
        android:onClick="onClickButton0"/>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_toRightOf="@id/button0"
        android:text="@string/buttonClear"
        android:textSize="25sp"
        android:onClick="onClickButtonClear"/>

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMultiply"
        android:layout_toRightOf="@id/buttonClear"
        android:layout_alignRight="@id/userInput"
        android:text="@string/buttonDivide"
        android:textSize="25sp"
        android:onClick="onClickButtonDivide"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonDot"
        android:layout_alignLeft="@id/buttonDot"
        android:layout_toLeftOf="@id/buttonEqual"
        android:layout_alignTop="@id/buttonEqual"
        android:layout_alignBaseline="@id/buttonEqual"
        android:text="@string/buttonSend"
        android:textSize="20sp"
        android:onClick="onClickButtonSend"/>

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonDivide"
        android:layout_toRightOf="@id/button9"
        android:layout_alignRight="@id/userInput"
        android:text="@string/buttonEqual"
        android:textSize="20sp"
        android:onClick="onClickButtonEqual"/>

</RelativeLayout>